Bug 27081 - polkit 0.96: pkexec fails to build on non glibc systems
Summary: polkit 0.96: pkexec fails to build on non glibc systems
Status: RESOLVED FIXED
Alias: None
Product: PolicyKit
Classification: Unclassified
Component: daemon (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: David Zeuthen (not reading bugmail)
QA Contact: David Zeuthen (not reading bugmail)
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-15 01:06 UTC by Alexis Ballier
Modified: 2011-02-23 05:40 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
use getcwd instead of get_current_dir_name (1000 bytes, patch)
2010-03-15 01:06 UTC, Alexis Ballier
Details | Splinter Review

Description Alexis Ballier 2010-03-15 01:06:32 UTC
Created attachment 34054 [details] [review]
use getcwd instead of get_current_dir_name

pkexec.c uses get_current_dir_name when we have getcwd in POSIX specs; this causes polkit not to build on, eg, FreeBSD. Here is a patch to fix that.
Comment 1 David Zeuthen (not reading bugmail) 2011-02-23 05:40:22 UTC
I committed another patch to fix this: http://cgit.freedesktop.org/PolicyKit/commit/?id=401d710a0c98f4011c3cf777677f96250bef9008


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.