Bug 27081 – pkexec fails to build on non glibc systems

https://bugs.freedesktop.org/show_bug.cgi?id=27081

Signed-off-by: David Zeuthen <davidz@redhat.com>